<resources>
    <string name="app_name">Evenu</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="prompt_username">Enter a username</string>
    <string name="prompt_password_again">Enter your password again</string>
    <string name="action_sign_up">SIGN UP!</string>
    <string name="invalid_password_error">Password is invalid</string>
    <string name="error_enter_email">Please enter your email address</string>
    <string name="error_email_invalid">This email address is invalid</string>
    <string name="createAnEvent">Create an Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Event Location</string>
    <string name="event_date">Date</string>
    <string name="event_time">Event Time</string>
    <string name="description">Description</string>
    <string name="add_keywords">Add Keywords (separate by spaces)</string>
    <string name="prompt_msg">Yala messages</string>
    <string name="sample_message">Sample yala</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="check">Check Details</string>
    <string name="action_send">Send</string>
</resources>
