<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/evenu_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edittext"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textIsSelectable="false"
            android:paddingHorizontal="5dp"
            android:hint="@string/event_location" />

        <EditText
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"

            android:background="@drawable/round_edittext"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textIsSelectable="false"
            android:paddingHorizontal="5dp"/>

        <EditText
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_date"

            android:background="@drawable/round_edittext"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textIsSelectable="false"
            android:paddingHorizontal="5dp"/>

        <EditText
            android:id="@+id/event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_time"

            android:background="@drawable/round_edittext"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textIsSelectable="false"
            android:paddingHorizontal="5dp"/>

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:background="@drawable/round_edittext"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textIsSelectable="false"
            android:lines="3"
            android:paddingHorizontal="5dp"/>

        <EditText
            android:id="@+id/event_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/add_keywords"

            android:background="@drawable/round_edittext"
            android:layout_marginBottom="10dp"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textIsSelectable="false"
            android:paddingHorizontal="5dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="24dp"
            android:onClick="createEventAttempt"
            android:text="Create"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background ="@drawable/round_button"/>

    </LinearLayout>


</LinearLayout>