<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">


    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="260dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="167dp"
            android:layout_height="136dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="95dp"
            android:layout_marginLeft="95dp"
            android:layout_marginBottom="78dp"
            app:srcCompat="@drawable/sens" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textIsSelectable="false"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="100"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:layout_marginTop="16dp"
        android:background="@color/blue"
        android:focusableInTouchMode="true"
        android:onClick="registerUser"
        android:text="@string/action_register"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_sign_in_button"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/blue"
        android:onClick="signInUser"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>