<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Title of event"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:fontFamily="@font/mymerriweather"
        android:id="@+id/title"
        android:layout_marginTop="10dp"
        android:onClick="displayEvent"/>

   <TextView
      android:layout_marginTop="20sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/name"
      android:textSize="15sp"
      android:textStyle="bold"
      android:fontFamily="@font/mymerriweather"
      android:id="@+id/display_date"
      android:onClick="displayEvent"/>


  <TextView
      android:layout_marginTop="5sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Event Description"
      android:textSize="15sp"
      android:textStyle="bold"
      android:fontFamily="@font/mymerriweather"
      android:id="@+id/display_description"/>

  <TextView
      android:layout_marginTop="5sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Display ID"
      android:textSize="15sp"
      android:textStyle="bold"
      android:fontFamily="@font/mymerriweather"
      android:id="@+id/display_id"/>

    <TextView
        android:layout_marginTop="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Location"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/mymerriweather"
        android:id="@+id/display_location"/>


    <TextView
        android:layout_marginTop="5sp"
        android:id="@+id/display_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Display Time"
        android:textSize="15sp"
        android:fontFamily="@font/mymerriweather"
        android:textStyle="bold" />

  <TextView
      android:layout_marginTop="5sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Associated keywords"
      android:textSize="15sp"
      android:textStyle="bold"
      android:fontFamily="@font/mymerriweather"
      android:id="@+id/keywords"/>


    <ListView
        android:id="@+id/chat_list_view"
        android:layout_width="fill_parent"
        android:layout_height="245dp"
        android:layout_above="@+id/listFooter"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:transcriptMode="alwaysScroll"
        android:background="@drawable/customborder"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/listFooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/prompt_msg"
            android:imeActionLabel="@string/action_send"
            android:imeOptions="actionUnspecified"
            android:inputType="textCapSentences|textAutoCorrect"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_send"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_send" />
    </LinearLayout>

</LinearLayout>